# sapientium-backend

./: .dockerignore  .flake8  AGENTS.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/: main.py
app/a12n/: __init__.py  router.py
app/db/: __init__.py
core/: config.py
core/models/: user.py
core/mongo/: __init__.py  db_vitls.py  repository.py
core/repositories/: __init__.py  user.py
tests/api/: test_healthcheck.py
