[project]
name = "sapientium-backend"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "d.zaklyakov",email = "d.zaklyakov@hyperad.tech"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asgi-correlation-id (>=4.3.4,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "faker (>=40.11.0,<41.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pymongo (>=4.15.4,<5.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["app", "core", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-aaa (>=0.17.2,<0.18.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
